<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>uk.gov.companieshouse</groupId>
		<artifactId>companies-house-parent</artifactId>
		<version>2.1.11</version> <!-- lookup parent from repository -->
	</parent>
	<artifactId>file-validation-api</artifactId>
	<version>unversioned</version>
	<name>file-validation-api</name>
	<description>ACSP workstream</description>
	<properties>
		<main.class>uk.gov.companieshouse.filevalidationservice.FileValidationApplication</main.class>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
		<structured-logging.version>3.0.10</structured-logging.version>
		<rest-service-common-library-version>2.0.2</rest-service-common-library-version>
		<private-api-sdk-java.version>4.0.248</private-api-sdk-java.version>
		<api-sdk-manager-java-library.version>3.0.6</api-sdk-manager-java-library.version>
		<api-security-java.version>2.0.7</api-security-java.version>
		<spring-boot-dependencies.version>3.4.4</spring-boot-dependencies.version>
		<spring-boot-maven-plugin.version>3.4.4</spring-boot-maven-plugin.version>
		<dependency-check-plugin.version>8.3.1</dependency-check-plugin.version>
		<junit.version>4.13.2</junit.version>
		<junit-jupiter.version>1.20.6</junit-jupiter.version>
		<api-helper-java.version>3.0.1</api-helper-java.version>
		<flapdoodle.version>4.16.1</flapdoodle.version>
		<commons-csv.version>1.12.0</commons-csv.version>

		<sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
		<sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
		<sonar.login></sonar.login>
		<sonar.password></sonar.password>
		<sonar.projectName>file-validation-api</sonar.projectName>
		<sonar.projectKey>uk.gov.companieshouse:file-validation-api</sonar.projectKey>
		<sonar.java.binaries>${project.basedir}/target,${project.basedir}/target/*</sonar.java.binaries>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>${commons-csv.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>structured-logging</artifactId>
			<version>${structured-logging.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>rest-service-common-library</artifactId>
			<version>${rest-service-common-library-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>private-api-sdk-java</artifactId>
			<version>${private-api-sdk-java.version}</version>
		</dependency>
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>api-sdk-manager-java-library</artifactId>
			<version>${api-sdk-manager-java-library.version}</version>
		</dependency>
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>api-security-java</artifactId>
			<version>${api-security-java.version}</version>
		</dependency>
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>api-helper-java</artifactId>
			<version>${api-helper-java.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
			<version>2.30.21</version>
			<exclusions>
				<exclusion>
					<groupId>io.netty</groupId>
					<artifactId>netty-common</artifactId>
				</exclusion>
				<!--CVE-2025-24970-->
				<exclusion>
					<groupId>io.netty</groupId>
					<artifactId>netty-handler</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- ShedLock Core -->
		<dependency>
			<groupId>net.javacrumbs.shedlock</groupId>
			<artifactId>shedlock-spring</artifactId>
			<version>6.0.2</version>
		</dependency>
		<!-- ShedLock MongoDB Provider -->
		<dependency>
			<groupId>net.javacrumbs.shedlock</groupId>
			<artifactId>shedlock-provider-mongo</artifactId>
			<version>6.0.2</version>
		</dependency>
		<!-- Tika -->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>3.0.0</version>
		</dependency>
		<!-- Test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot-maven-plugin.version}</version>
				<configuration>
					<mainClass>${main.class}</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<from>
						<image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21</image>
					</from>
					<to>
						<image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/file-validation-api</image>
					</to>
					<container>
						<expandClasspathDependencies>true</expandClasspathDependencies>
					</container>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>${dependency-check-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<parameters>true</parameters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>${sonar-maven-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
